--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
                         <li><span class="slash"> // </span></li>
 
-                        <li><a class="navitem"  href="https://github.com/shuqi7?tab=repositories" target="_blank"> Github </a></li>
+                        <li><a class="navitem"  href="https://github.com/shuqi7" target="_blank"> Github </a></li>
 
                         <li><span class="slash"> // </span></li>
 
@@ -442,7 +442,7 @@
         			</div>
         			<div class="grid-12" id="icon-list">
         				<ul>
-        					<li><a title="Github" href="https://github.com/shuqi7?tab=repositories">
+        					<li><a title="Github" href="https://github.com/shuqi7">
         						<span class="fa fa-github fa-2x social-footer"></span>
         					</a></li>
         					<li><a title="LinkedIn" href="https://www.linkedin.com/in/qi-shu-9258a6134/">
