--- a/index.html
+++ b/index.html
@@ -199,13 +199,15 @@
 
         			<div class="grid-12">
         				<h2> Intro </h2>
-        				<p> Hi, this is Qi Shu. I'm currently a second-year student at the University of Waterloo, pursuing a Computer Science and Business Administration Double Degree.
+        				<p> Hi, this is Qi Shu. I'm currently a third-year student at the University of Waterloo, pursuing a Computer Science and Business Administration Double Degree.
         				 I love programming to solve problems, especially tackling issues which I might encouter in our daily lives. I'm also interested in finance-related fields; I have always been
         				passionate about stock markets, and I hope I could have an opportunity to get in touch with it in the future. :)</p>
         			    <br>
-        			    <p>I'm currently working as a Web Developer at Ontario Investment Office, a division under the Ontario Ministry of Economic Development and Growth. The project
-        			    I have been working on recently is to create a responsive Table of Content for our deparment's website, with careful consideration of accessibility and bilinguilism of English and French.
-        			    I will then focus on the main project of my co-op soon, which is to visualize the present data on our website with d3.js library, in an interactive and vivid way.</p>
+        			    <p>I worked as a web developer this winter at Ontario Investment Office, and was a research assistant in school this summer in charge of developing a web application to compare people's 
+        			    working efficiency, and analyzing data with NumPy. I will be starting another research
+        				assistantship this fall, compiling DBMS that has a simple extensible runtime and operates 
+        				by translating SQL-like datamanipulation requests directly to C code that interfaces with 
+        				this runtime</p>
         				<br>
         				<p>I hope that I would have opportunities to work in different fields, be it in tech or finance, and explore
         				different companies' culture, and find where my true passion lies eventually. </p>
@@ -234,9 +236,27 @@
         			<div class="grid-12">
         				<h2> Work Experience </h2>
         				<br>
+        				<h3> Research Assistant - Compiler Construction </h3>
+        				<p style="font-weight: bold;">Data System Group - University of Waterloo</p>
+        				<p style="font-weight: bold;">Starting in 09/2018</p>
+        				<ul>
+        					<li>
+        						Compiling DBMS that has a simple extensible runtime and operates by translating SQL-like data manipulation requests directly to C code that interfaces with this runtime
+        					</li>
+        				</ul>
+        				<h3> Research Assistant - Web Application Development</h3>
+        				<p style="font-weight: bold;">Human-Computer Interaction Lab - University of Waterloo</p>
+        				<p style="font-weight: bold;">05/2018 - 08/2018</p>
+        				<ul>
+        					<li>
+        						Built an online crowdsourcing platform based on Node.js
+        					</li>
+							<li>Parsed data with Python for analysis in NumPy to discover a more efficient online crowdsourcing strategy which is mutually beneficial to both parties
+        					</li>
+        				</ul>
         				<h3> Web Developer</h3>
         				<p style="font-weight: bold;">Ontario Investment Office</p>
-        				<p style="font-weight: bold;"> 01/2017 - Present</p>
+        				<p style="font-weight: bold;"> 01/2017 - 04/2017</p>
         				<ul>
         					<li>Developing responsive table of content scripts which can be applied to all webpages of Ontario Investment Office</li>
         					<li>Visualizing interactive data with d3.js library</li>
@@ -281,7 +301,7 @@
         					</ul>
         					<h4> Library/Framework </h4>
         					<ul>
-        						<li>NumPy, Pandas</li><li>React Native/ReactJS, jQuery, Bootrstrap, AngularJS</li> <li>THREE.js/WebGL, d3.js, highcharts.js</li>
+        						<li>NumPy, Pandas</li><li>React Native/ReactJS, Node.js, jQuery, Bootrstrap, AngularJS</li> <li>THREE.js/WebGL, d3.js, highcharts.js</li>
         					</ul>
         					<h4> Operating System </h4>
         					<ul>
